--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   sidebarx: ^0.17.1
+  provider: ^6.0.5
+  table_calendar: ^3.0.9
+  window_manager: ^0.3.0
+  system_info: ^1.0.1
+  process_run: ^0.12.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
