--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,17 @@ dependencies:
   system_info: ^1.0.1
   process_run: ^0.12.0
   intl: ^0.18.0
+  image: ^3.2.0
+  screen_capturer: ^0.1.7
+  hotkey_manager: ^0.1.5
+  # path_provider: ^2.0.15
+  permission_handler: ^12.0.0+1
+  web_socket_channel: ^2.1.0
+  flutter_ffmpeg: ^0.4.0
+  camera: ^0.10.0
+  video_player: ^2.7.0
+  flutter_local_notifications: ^14.1.1
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
