--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   video_player: ^2.7.0
   flutter_local_notifications: ^14.1.1
   path_provider: ^2.1.1
+  cached_network_image: ^3.3.0
+  transparent_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
